--- a/webserver/templates/api.html
+++ b/webserver/templates/api.html
@@ -4,8 +4,8 @@
     <div class="main-form">
         <form>
             <h2 class="text-center">Captcha Solver API</h2>
-            <p class="text-center bg-info">Simple Captcha Solver using TensorFlow RNN</p>
-            <p class="text-center small">AI will automatically recognizes characters<br>in the uploaded image.</p>
+            <p class="text-center bg-info">TensorFlow RNN Captcha Solver API</p>
+            <p class="text-center small">You can download sample captcha image <a href="https://sugang.knu.ac.kr/Sugang/captcha" target="_blank">HERE</a></p>
             <div class="or-seperator"></div>
             <br>
             <div class="center-block">
