--- a/webserver/templates/api.html
+++ b/webserver/templates/api.html
@@ -50,6 +50,18 @@
         });
         function readURL(input) {
             if (input.files && input.files[0]) {
+                var filename = input.files[0].name.substr((input.files[0].name.lastIndexOf('.') + 1))
+                var filesize = input.files[0].size
+                // 5MB 파일 크기 제한
+                if (filesize > 5*1024*1024) {
+                    alert("File too Big (Max: 5MB)");
+                    return false;
+                }
+                // 확장자 제한
+                if (filename.toLowerCase() != "png") {
+                    alert("Only Accept PNG File");
+                    return false;
+                }
                 var reader = new FileReader();
                 reader.onload = function (e) {
                     $('#uploaded_img').attr('src', e.target.result);
