Use Stream in webserver

--- a/webserver/templates/main.html
+++ b/webserver/templates/main.html
@@ -9,7 +9,7 @@
             <div class="or-seperator"></div>
             <br>
             <div class="center-block">
-                <img src="{{url_for('static', filename=filename)}}" class="center-block" width="225" height="60" />
+                <img src="{{ img_data }}" class="center-block" width="225" height="60" />
             </div>
             <div class="or-seperator"></div>
             <h1 class="text-center bg-success">{{ captcha }}</h1>
