--- a/webserver/templates/main.html
+++ b/webserver/templates/main.html
@@ -5,7 +5,7 @@
         <form>
             <h2 class="text-center">Captcha Solver</h2>
             <p class="text-center bg-info">Simple Captcha Solver using TensorFlow RNN</p>
-            <p class="text-center small">After fetching a random captcha image,<br>AI will automatically recognizes characters in the image.</p>
+            <p class="text-center small">AI will automatically recognizes characters in the random sample image.</p>
             <div class="or-seperator"></div>
             <br>
             <div class="center-block">
@@ -17,6 +17,6 @@
             <br>
             <input type="button" class="btn btn-warning next-btn btn-block" onclick="location.reload();" value="Reload"></button>
         </form>
-        <p class="text-center text-muted small">AUG 2021 from Altius</p>
+        <p class="text-center text-muted small">AUG 2022 by Altius</p>
     </div>
 {% endblock %}
