feat: Add sample image download feature in webserver

--- a/webserver/templates/api.html
+++ b/webserver/templates/api.html
@@ -3,9 +3,10 @@
 {% block content %}
     <div class="main-form">
         <form>
-            <h2 class="text-center">Captcha Solver API</h2>
+            <h2 class="text-center"><a href="/" style="color:black">Captcha Solver</a> <a href="/api" style="color: black;">API</a></h2>
             <p class="text-center bg-info">TensorFlow RNN Captcha Solver API</p>
-            <p class="text-center small">captcha image type: 140x35xRGBA32(PNG)</p>
+            <p class="text-center small bg-warning">Allowed image type: 140x35xRGBA32(PNG)</p>
+            <p class="text-center small">To download random sample captcha image file, <a href="/getsample">Click HERE</a></p>
             <div class="or-seperator"></div>
             <br>
             <div class="center-block">
