--- a/webserver/templates/main.html
+++ b/webserver/templates/main.html
@@ -5,7 +5,8 @@
         <form>
             <h2 class="text-center">Captcha Solver</h2>
             <p class="text-center bg-info">Simple Captcha Solver using TensorFlow RNN</p>
-            <p class="text-center small">AI will automatically recognizes characters in the random sample image.</p>
+            <p class="text-center small">AI will automatically recognizes the characters in image.</p>
+            <p class="text-center small">To test API with your own image file, <a href="/api">visit /api</a></p>
             <div class="or-seperator"></div>
             <br>
             <div class="center-block">
